# llm-subscription-utilisation-tracker

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  budget.py  install.sh  pyproject.toml  track.py  uninstall.sh  usage.py
docs/: README.md  architecture.md  data-model.md  launchd.md
launchagents/: com.sklavit.claude-usage.account.plist  com.sklavit.claude-usage.scan.plist
skills/claude-usage/: SKILL.md
