[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-subscription-utilisation-tracker"
version = "0.1.0"
description = "Persistent, append-only archive of Claude Code token usage, cost, and subscription-limit utilisation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sergii Nechuiviter" }]
keywords = ["claude", "anthropic", "usage", "tokens", "cost", "cli", "subscription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
# Standard library only — no runtime dependencies. Keep it that way.
dependencies = []

[project.urls]
Homepage = "https://github.com/Sklavit/llm-subscription-utilisation-tracker"
Repository = "https://github.com/Sklavit/llm-subscription-utilisation-tracker"
Issues = "https://github.com/Sklavit/llm-subscription-utilisation-tracker/issues"
Changelog = "https://github.com/Sklavit/llm-subscription-utilisation-tracker/blob/main/CHANGELOG.md"

[project.scripts]
claude-usage-tracker = "budget:main"

[tool.setuptools]
py-modules = ["budget"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Sensible defaults for a small script; expand as needed.
select = ["E", "F", "W", "I", "UP", "B"]
